Colaboratory를 통해 생성됨

--- a/Astros_Statistical_Test_and_Modelling.ipynb
+++ b/Astros_Statistical_Test_and_Modelling.ipynb
@@ -5,8 +5,12 @@
     "colab": {
       "provenance": [],
       "gpuType": "T4",
+      "collapsed_sections": [
+        "VjJIN3k67T0L",
+        "DaNTJOebQ9cT"
+      ],
       "mount_file_id": "1FSkhFyOdPvqlFFY3PY43jGvhLyelxTBu",
-      "authorship_tag": "ABX9TyOAz+AzMFztQgsJ3R601kBY",
+      "authorship_tag": "ABX9TyOnNK1J3lPPIEcBPQclYvR+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -8096,7 +8100,7 @@
         "def check_stationarity(series, series_name, non_stationary_list):\n",
         "    result = adfuller(series)\n",
         "    #print(f'ADF Statistic for {series_name}: {result[0]}')\n",
-        "    print(f'p-value for {series_name}: {result[1]}')\n",
+        "    #print(f'p-value for {series_name}: {result[1]}')\n",
         "    if result[1] > 0.05:\n",
         "        #print(f\"{series_name} is not stationary\")\n",
         "        non_stationary_list.append(series_name)\n",
